<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sxtlal.allenlucas.yohodemo.MainActivity">
    <RadioGroup
        android:id="@+id/mainActivity_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <RadioButton
            android:id="@+id/mainActivity_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one"
            android:button="@null"
            android:gravity="center"
            android:checked="true"
            android:textColor="@drawable/textcolor"
            android:drawableTop="@drawable/onedraw"/>
        <RadioButton
            android:id="@+id/mainActivity_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/textcolor"
            android:drawableTop="@drawable/twodraw"/>
        <RadioButton
            android:id="@+id/mainActivity_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tree"
            android:button="@null"
            android:gravity="center"
            android:textColor="@drawable/textcolor"
            android:drawableTop="@drawable/treedraw"/>
        <RadioButton
            android:id="@+id/mainActivity_btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four"
            android:gravity="center"
            android:button="@null"
            android:textColor="@drawable/textcolor"
            android:drawableTop="@drawable/fourdraw"/>
        <RadioButton
            android:id="@+id/mainActivity_btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five"
            android:gravity="center"
            android:button="@null"
            android:textColor="@drawable/textcolor"
            android:drawableTop="@drawable/fivedraw"/>
    </RadioGroup>
    <FrameLayout
        android:id="@+id/fragmentlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/mainActivity_group"></FrameLayout>
</RelativeLayout>
