<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioGroup
        android:layout_marginTop="10dp"
        android:id="@+id/twofragment_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/twofragment_btn1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:text="@string/twofragment_boy"
            android:textSize="20sp"
            android:textColor="@drawable/twofragmentcolor"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/share_actionbar_line"/>
        <RadioButton
            android:id="@+id/twofragment_btn2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:text="@string/twofragment_girl"
            android:textSize="20sp"
            android:textColor="@drawable/twofragmentcolor"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/share_actionbar_line"/>
        <RadioButton
            android:id="@+id/twofragment_btn3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:text="@string/twofragment_life"
            android:textSize="20sp"
            android:textColor="@drawable/twofragmentcolor"/>
    </RadioGroup>
</LinearLayout>