<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title"
        android:paddingLeft="10dp">
        <ImageView
            android:id="@+id/onefragment_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/tab_menu_icon_n"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/twofragment_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twofragment_two"
            android:layout_centerInParent="true"
            android:textColor="@color/onefragment_btn_background"/>
        <TextView
            android:id="@+id/twofragment_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twofragment_one"
            android:layout_toLeftOf="@id/twofragment_two"
            android:layout_alignBaseline="@id/twofragment_two"
            android:layout_marginRight="50dp"
            android:textColor="@color/onefragment_btn_background"/>

        <TextView
            android:id="@+id/twofragment_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twofragment_three"
            android:layout_toRightOf="@id/twofragment_two"
            android:layout_alignBaseline="@id/twofragment_two"
            android:layout_marginLeft="50dp"
            android:textColor="@color/onefragment_btn_background"/>
        <TextView
            android:id="@+id/twofragment_line1"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_alignLeft="@id/twofragment_one"
            android:layout_alignRight="@id/twofragment_one"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:background="@color/onefragment_btn_background"/>
        <TextView
            android:id="@+id/twofragment_line2"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_alignLeft="@id/twofragment_two"
            android:layout_alignRight="@id/twofragment_two"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:visibility="invisible"
            android:background="@color/onefragment_btn_background"/>
        <TextView
            android:id="@+id/twofragment_line3"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_alignLeft="@id/twofragment_three"
            android:layout_alignRight="@id/twofragment_three"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:visibility="invisible"
            android:background="@color/onefragment_btn_background"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/twofragment_onelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></RelativeLayout>
</LinearLayout>